--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="">Home</a></li>
                 <li><a href="#Portifolio">Portfolio</a></li>
                 <li><a href="#AboutMe">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#Contact">Contact</a></li>
             </ul>
             <h1> Xayah Thiboudeoux</h1>
             <p>
@@ -101,8 +101,35 @@
                 <label for="img-3" class="nav-dot" id="img-dot-3"></label>
               </li>
             </ul>
-          </div>﻿
-        <!---End Slider-/->
+          </div>
+        <!---End Slider-->
     </div>
+    <div class="contactContent" id="Contact">
+        <div class="leftContactContent">
+            <h2>
+                Contact
+            </h2>
+            <p>
+                If you have any questions, please contact me.
+            </p>
+            <form action="">
+                <input type="text" placeholder="Name"> 
+                <input type="email" placeholder="Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <div class="rightContactContent">
+            <h2>
+                Contact
+            </h2>
+            <p>
+                If you have any questions, please contact me.
+                Whatsapp: <a href="http://wa.me/555555555555">555555555555</a>
+                Instagram: <a href="http://www.instagram.com/xayahthiboudeoux">@xayahthiboudeoux</a>
+                Tumbleupon: <a href="http://www.tumbleupon.com/xayahthiboudeoux">@xayahthiboudeoux</a>
+                Facebook: <a href="http://www.facebook.com /xayahthiboudeoux">@xayahthiboudeoux</a>
+            </p>
+
 </body>
 </html>
