ESqueleto base do projeto

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
                 Tumbleupon: <a href="http://www.tumbleupon.com/xayahthiboudeoux">@xayahthiboudeoux</a>
                 Facebook: <a href="http://www.facebook.com /xayahthiboudeoux">@xayahthiboudeoux</a>
             </p>
-
+        </div>
+    </div>
+    <footer>
+        <p>
+            ... team members and contributors ...
+        </p>
+    </footer>
 </body>
 </html>
