--- a/index.html
+++ b/index.html
@@ -2,38 +2,41 @@
 <html lang="pt-BR">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xayah Thiboudeoux</title>
+
+    <title>Portfólio</title>
+
     <link rel="stylesheet" href="scss/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Square+Peg&display=swap"
-        rel="stylesheet">
 
 </head>
 
 <body>
-    <div class="mainContent">
-        <div class="leftMainContent">
-            <h2>Photographer</h2>
-        </div>
-        <div class="rightMainContent">
+    <header id='container-initial'>
+
+        <div class="menu">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="#Portifolio">Portfolio</a></li>
-                <li><a href="#AboutMe">About</a></li>
-                <li><a href="#Contact">Contact</a></li>
+            <li><a href="#Portfolio">Portfólio</a></li>
+            <li><a href="#AboutMe">Sobre Mim</a></li>
+            <li><a href="#Contact">Contato</a></li>
             </ul>
-            <h1> Xayah Thiboudeoux</h1>
-            <p>
-                almost a good photographer, i love to shoot and i love to make my own photos.
-                I am a student of the University of the West of England.
-            </p>
-            <button class="contact">Contact</button>
+
+            <div class="text-header">
+            <h2>Deise Silva</h2>
+            <h1>PHOTOGRAPHER</h1>
+            </div>
         </div>
-    </div>
+
+        <img 
+            src="/img/image-header.png" 
+            alt=""
+        >
+    </header>
     <div class="aboutmeContent" id="AboutMe">
         <h2>
             About me
