--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
 
         <div class="menu">
             <ul>
-            <li><a href="#Portfolio">Portfólio</a></li>
-            <li><a href="#AboutMe">Sobre Mim</a></li>
-            <li><a href="#Contact">Contato</a></li>
+                <li><a href="#Portfolio">Portfólio</a></li>
+                <li><a href="#AboutMe">Sobre Mim</a></li>
+                <li><a href="#Contact">Contato</a></li>
             </ul>
 
             <div class="text-header">
-            <h2>Deise Silva</h2>
-            <h1>PHOTOGRAPHER</h1>
+                <h2>Deise Silva</h2>
+                <h1>PHOTOGRAPHER</h1>
             </div>
         </div>
 
-        <img 
-            src="/img/image-header.png" 
-            alt=""
-        >
+        <img src="/img/image-header.png" alt="">
     </header>
     <div class="aboutmeContent" id="AboutMe">
         <h2>
